--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="../image/Head_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dbatu Scholar Hub</title>
+        <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+/>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
